2nd apr liquibase commit